<resources>
    <string name="english_numeric_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890.</string>
    <string name="app_name">国际货代</string>
    <string name="order_list">订单列表</string>
    <string name="fill_in_the_clearing_information">填写结算信息</string>
    <string name="supplier_quotation">渠道商报价</string>
    <string name="order_details">订单详情</string>
    <string name="determine_the_quotation">确定报价</string>
    <string name="put_questions_to">提问</string>
    <string name="medium_speed_single_number">货运单号</string>
    <string name="input_freight_single_number">请输入货运单号</string>
    <string name="receiving_sending_time">收寄时间</string>
    <string name="input_receiving_sending_time">请输入货物收寄时间</string>
    <string name="input_freight">请输入货物运费</string>
    <string name="complete">完成</string>
    <string name="collect_send_information">收寄信息</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="close_the_order">关闭订单</string>
    <string name="question_list">提问列表</string>
    <string name="input_order_number_consignment_company_name">请输入订单号/发货公司/品名</string>
    <string name="supplier_questions">渠道商提问</string>
    <string name="quotation_order_delivery">报价订单</string>
    <string name="amend_the_order">修改订单</string>
    <string name="home">首页</string>
    <string name="order_information">订单信息</string>
    <string name="order_number">订单号：</string>
    <string name="business_unit">经营单位：</string>
    <string name="choice">选择</string>
    <string name="next_step">下一步</string>
    <string name="destination_city"></string>
    <string name="clearing_information">结算信息</string>
    <string name="select_information1">选填信息-1</string>
    <string name="select_information2">选填信息-2</string>
    <string name="quotation_information">报价信息</string>
    <string name="details_of_goods">货品详情</string>
    <string name="company_introduction">本公司可为货品提供更多优质服务，运输险，货品盗抢险，自燃险本公司都可直接自行购买，免去了顾客一切后顾之忧。</string>
    <string name="determine">确定</string>
    <string name="reply_problem">回复问题</string>
    <string name="information_supplement">信息补录</string>
    <string name="communication">群聊</string>
    <string name="history_order">历史订单</string>
    <string name="take_picture">拍照</string>
    <string name="album_selection">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="upload_picture">上传图片</string>
    <string name="viewpager_indicator">指示器</string>
    <string name="details_order_transportation">订单运输详情</string>
</resources>
