<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/upload_image_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/take_picture"
            android:textColor="@color/iff_2A2A2A"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/iff_2A2A2A" />

        <TextView
            android:id="@+id/choosePhoto"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/album_selection"
            android:textColor="@color/iff_2A2A2A"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/upload_image_bg"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/iff_2A2A2A"
        android:textSize="16sp" />


</LinearLayout>