<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_ll_head_mm_bg">
    <include layout="@layout/iff_title_layout" />

    <LinearLayout
        android:paddingBottom="15dp"
        style="@style/padding_left_right_13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/iff_FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/w60dp_w_666_15sp"
                android:text="@string/medium_speed_single_number" />

            <EditText
                android:id="@+id/freight_single_number_et"
                style="@style/collect_send_information_et"
                android:hint="@string/input_freight_single_number" />
        </LinearLayout>

        <include layout="@layout/iff_line_view_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/w60dp_w_666_15sp"
                android:text="@string/receiving_sending_time" />

            <EditText
                android:id="@+id/receiving_sending_time_et"
                style="@style/collect_send_information_et"
                android:hint="@string/input_receiving_sending_time" />
            <TextView
                android:layout_marginLeft="-15dp"
                style="@style/w60dp_w_666_15sp"
                android:text="天" />
        </LinearLayout>

        <include layout="@layout/iff_line_view_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/w60dp_w_666_15sp"
                android:text="运&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;费" />

            <EditText
                android:id="@+id/freight_et"
                android:inputType="phone|number"
                style="@style/collect_send_information_et"
                android:hint="@string/input_freight" />
            <TextView
                android:layout_marginLeft="-15dp"
                style="@style/w60dp_w_666_15sp"
                android:text="元" />
        </LinearLayout>

        <include layout="@layout/iff_line_view_layout" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/w60dp_w_666_15sp"
                android:text="收货地址" />

            <EditText
                android:id="@+id/receiving_address_et"
                style="@style/collect_send_information_et"
                android:hint="请输入收货地址" />
        </LinearLayout>

        <include layout="@layout/iff_line_view_layout" />

    </LinearLayout>
    <LinearLayout
        style="@style/padding_left_right_13dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <Button
            android:layout_weight="1"
            android:id="@+id/temporary_storage_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_login_bg_style"
            android:enabled="false"
            android:gravity="center"
            android:text="暂存"
            android:textColor="@color/iff_FFFFFF"
            android:textSize="18sp" />
        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:id="@+id/end_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_login_bg_style"
            android:enabled="false"
            android:gravity="center"
            android:text="完结"
            android:textColor="@color/iff_FFFFFF"
            android:textSize="18sp" />
        <Button
            android:layout_weight="1"
            android:id="@+id/look_at_logistics_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_login_bg_style"
            android:gravity="center"
            android:enabled="false"
            android:text="查看物流"
            android:textColor="@color/iff_FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
